Wiring up buttons (IBActions & IBOutlets)

--- a/AudioRecorder/Base.lproj/Main.storyboard
+++ b/AudioRecorder/Base.lproj/Main.storyboard
@@ -68,20 +68,72 @@
                                 <rect key="frame" x="0.0" y="64" width="320" height="504"/>
                                 <subviews>
                                     <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="wZM-vl-XAO">
-                                        <rect key="frame" x="0.0" y="0.0" width="320" height="504"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="320" height="168"/>
                                         <subviews>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="9eS-lv-BIL" userLabel="Slow Button">
-                                                <rect key="frame" x="0.0" y="0.0" width="160" height="504"/>
+                                                <rect key="frame" x="0.0" y="0.0" width="160" height="168"/>
                                                 <state key="normal" image="Slow"/>
+                                                <connections>
+                                                    <action selector="playSoundForButton:" destination="CG1-uo-hHr" eventType="touchUpInside" id="jVr-tE-6ts"/>
+                                                </connections>
                                             </button>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="kHH-d0-Es0" userLabel="Fast Button">
-                                                <rect key="frame" x="160" y="0.0" width="160" height="504"/>
+                                                <rect key="frame" x="160" y="0.0" width="160" height="168"/>
                                                 <state key="normal" image="Fast"/>
+                                                <connections>
+                                                    <action selector="playSoundForButton:" destination="CG1-uo-hHr" eventType="touchUpInside" id="uB0-qG-bmF"/>
+                                                </connections>
+                                            </button>
+                                        </subviews>
+                                    </stackView>
+                                    <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="Ydx-xw-miZ">
+                                        <rect key="frame" x="0.0" y="168" width="320" height="168"/>
+                                        <subviews>
+                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="fxE-dt-jcm" userLabel="HighPitch Button">
+                                                <rect key="frame" x="0.0" y="0.0" width="160" height="168"/>
+                                                <state key="normal" image="HighPitch"/>
+                                                <connections>
+                                                    <action selector="playSoundForButton:" destination="CG1-uo-hHr" eventType="touchUpInside" id="AXG-xX-6qm"/>
+                                                </connections>
+                                            </button>
+                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="LfR-zy-YTt" userLabel="LowPitch Button">
+                                                <rect key="frame" x="160" y="0.0" width="160" height="168"/>
+                                                <state key="normal" image="LowPitch"/>
+                                                <connections>
+                                                    <action selector="playSoundForButton:" destination="CG1-uo-hHr" eventType="touchUpInside" id="eS2-df-kvz"/>
+                                                </connections>
+                                            </button>
+                                        </subviews>
+                                    </stackView>
+                                    <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="dA3-kA-JTf">
+                                        <rect key="frame" x="0.0" y="336" width="320" height="168"/>
+                                        <subviews>
+                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="q3q-VX-B2Y" userLabel="Echo Button">
+                                                <rect key="frame" x="0.0" y="0.0" width="160" height="168"/>
+                                                <state key="normal" image="Echo"/>
+                                                <connections>
+                                                    <action selector="playSoundForButton:" destination="CG1-uo-hHr" eventType="touchUpInside" id="OLM-Sa-sWz"/>
+                                                </connections>
+                                            </button>
+                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="0tJ-Sq-loJ" userLabel="Reverb Button">
+                                                <rect key="frame" x="160" y="0.0" width="160" height="168"/>
+                                                <state key="normal" image="Reverb"/>
+                                                <connections>
+                                                    <action selector="playSoundForButton:" destination="CG1-uo-hHr" eventType="touchUpInside" id="fiZ-T3-pSg"/>
+                                                </connections>
                                             </button>
                                         </subviews>
                                     </stackView>
                                 </subviews>
                             </stackView>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="TFX-XD-1Qx" userLabel="Stop Button">
+                                <rect key="frame" x="128" y="500" width="64" height="64"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" image="Stop"/>
+                                <connections>
+                                    <action selector="stopButtonPressed:" destination="CG1-uo-hHr" eventType="touchUpInside" id="erP-Pf-10K"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" red="0.99999600649999998" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
@@ -92,6 +144,15 @@
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="2Bp-uC-N4d"/>
                     </view>
+                    <connections>
+                        <outlet property="echoButton" destination="q3q-VX-B2Y" id="dOw-es-mM7"/>
+                        <outlet property="fastButton" destination="kHH-d0-Es0" id="uoP-Bp-ZzW"/>
+                        <outlet property="highPitchButton" destination="fxE-dt-jcm" id="dk7-id-KEu"/>
+                        <outlet property="lowPitchButton" destination="LfR-zy-YTt" id="831-2m-NdU"/>
+                        <outlet property="reverbButton" destination="0tJ-Sq-loJ" id="dTg-ey-tXb"/>
+                        <outlet property="slowButton" destination="9eS-lv-BIL" id="fa1-nZ-q1Z"/>
+                        <outlet property="stopButton" destination="TFX-XD-1Qx" id="hch-sf-fTW"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="eG1-hy-tKM" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
@@ -117,8 +178,12 @@
         </scene>
     </scenes>
     <resources>
+        <image name="Echo" width="90" height="90"/>
         <image name="Fast" width="90" height="90"/>
+        <image name="HighPitch" width="90" height="90"/>
+        <image name="LowPitch" width="90" height="90"/>
         <image name="Record" width="155" height="155"/>
+        <image name="Reverb" width="90" height="90"/>
         <image name="Slow" width="90" height="90"/>
         <image name="Stop" width="155" height="155"/>
     </resources>
